Bug 1071433 - Change order of audio/3gpp association for Gallery Apps. r=bz

The AUDIO_3GPP has to come after the VIDEO_3GPP entry because the Gallery app
on Firefox OS depends on the "3gp" extension mapping to the "video/3gpp" MIME
type.